
2004-06-07	Florian Boor  	<florian.boor@kernelconcepts.de>
	* ipaqscreen/rotation.c: Start implementing using Xrandr extensions
                                 directly.
	* Makefile: Install gpe-conf binary suid root. Removed old cruft.

2004-06-04	Florian Boor  	<florian.boor@kernelconcepts.de>
	* network.c, sysinfo.c: Fixed some missing initialisations of
	  GErrors that caused segfaults if they are used.
	* applets.c: Made OK button default.

2004-06-04  Philip Blundell  <philb@gnu.org>

	* gpe-conf.desktop.in: New desktop file for top-level "control panel".
	* pixmaps/gpe-config.png, pixmaps/gpe-config-admin.png: Switch
	icons around.

2004-06-04	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Makefile: some minor build fixes.
	* battery.c: Fixed platform dependency.
	* cardinfo.c: Fixed incuding of pcmcia headers.

2004-06-03	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Makefile, brightness.c: Some more changes to become more independent from 
	  hardware platform.
	* Makefile: Several changes to to make it compatible with OE.

2004-06-02	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Makefile, main.c: Disabled obsolete appmgr stuff.
	* info-main.c: removed debug output.
	* Released V 0.1.8

2004-05-27	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Makefile, control1: Removed obsolete libdotdesktop stuff.

2004-05-24	Florian Boor  	<florian.boor@kernelconcepts.de>
	* theme.c: New setting: toolbar style via xsettings.

2004-03-27	Florian Boor  	<florian.boor@kernelconcepts.de>
	* ownerinfo.c, login-setup.c: Removed markup from string, fixes bug #1187.
	* gpe-conf-users.desktop.in: Removed trailing spaces, fixes bug #1189.

2004-03-19	Florian Boor  	<florian.boor@kernelconcepts.de>
	* login-setup.*: Fixed segfault, fixed warning.
	* Makefile: Fixed debug builds.
	
2004-03-15	Florian Boor  	<florian.boor@kernelconcepts.de>
	* keyctl.c: Fixed path to icon. 
	
2004-03-05	Florian Boor  	<florian.boor@kernelconcepts.de>